themes/racc/src/sass/block/_search-form.scss
.search_form{
    width: 100vw;
    background: rgba(255, 255, 255, 0.95);
    position: fixed;
    top: 0;
    z-index: 200000;
    height: 100vh;
    overflow: hidden;
    z-index: 450;
    

    // .search-block-form{
    //     width: 80%;
    //     margin: 45px auto;
    // }

    .topbarsearch{
        display: none;
    }

    form{
        width: 80%;
        margin: 45px auto;
        margin-top: 25%;
        

        .form-search{
            background-color: #152a39;
            color: white !important;
            border: none;
            padding: 19px;
            font-size: 2em;
            box-sizing: border-box !important;
            font-family: $racc-font;
            font-weight: 400;
            width: 80%;
            line-height: 1.2;
            margin: 1em 10%;

            ::-webkit-input-placeholder{ //Webkit: Chrome, Blink, etc.
                color: white;
            }

            :-moz-placeholder{ //Firefox 4-18
                color: white;
            }
            
            ::-moz-placeholder{ //Firefox 19+
                color: white;
            }

            :-ms-input-placeholder{ //IE
                color: white;
            }
        }

        .search-form__submit{
            background-color: $racc-red;
            border: none;
            height: 43px;
            font-size: 19px;

            margin: 0 35% !important;
            color: white;
            width: 30%;
            box-shadow: none;
            border-radius: 2px;
            font-family: $racc-font;
            font-weight: 400;
        }
    }
}

@media all and (min-width: 560px) and (max-width: 1023px){
    form{
        margin-top: 15%;
    }
    
    .search-form__submit{
        height: 43px;
        font-size: 19px;
        margin: 0 40% !important;
        width: 20%;
    }
}

@media all and (min-width: 1024px){
    .search_form{
        .topbarsearch{
            display: block;
            width: 100%;
            height: 3.5em;
            background-color: $racc-red;

            form{
                margin-top: 0;

                .search-form__submit{
                    height: 43px;
                    font-size: 19px;
                    margin: 0 45% !important;
                    width: 10%;
                }
            }
    
            i{
                font-size: 2.5em;
                position: absolute;
                top: 8px;
                right: 45px;
                cursor: pointer;
                color: white;
            }
        }
    }
}

